# IncentivAI

./: .gitignore  25-end_Testing_links_incentivai copy.xlsx  25-end_Testing_links_incentivai.xlsx  Electric Utilites copy.xlsx  Extracted_Incentives.xlsx  README.md  Relevant URLs.xlsx  Scraped_Results.docx  Testing_links_incentivai.xlsx  crawled_urls.txt  errors.csv  pdf_test_links.xlsx  subset_Testing_links_incentivai copy.xlsx  subset_Testing_links_incentivai.xlsx  web_finder.py  webscrape_GL.py  ~$Testing_links_incentivai.xlsx
AI_merge/: app.py  config.py  main.py  pyproject.toml
AI_merge/modules/: exporter.py  llm_agent.py  scraper.py  url_source.py
Kaleb/: main.py  (+9 more)
incentivAI-Dawson/: README (2).md  README.md  app.py  cli.py  config.py  errors.csv  incentives_output (1).csv  main.py  markdown_output.csv  pyproject.toml  test_ollama.py
incentivAI-Dawson/modules/: content_scraper.py  database_manager.py  excel_reader.py  exporter.py  llm_agent.py  llm_extractor.py  ollama_agent.py  processor.py  scraper.py  url_queue_manager.py  url_source.py
incentivAI-Dawson/slurm/: run_job.sh
incentivAI-Dawson/utils/: logger.py
refactored_g1/: README.md  app.py  cli.py  config.py  errors.csv  main.py  pyproject.toml  runjob.sh
refactored_g1/modules/: __init__.py  exporter.py  llm_agent.py  processor.py  scraper.py  url_source.py
refactored_g1/scraped_data/: www_bcremc_com_1a380a37.md  www_bcremc_com_1a7fa6b3.md  www_bcremc_com_2ac56738.md  www_bcremc_com_4bd2d7b8.md  www_bcremc_com_56434a8a.md  www_bcremc_com_59cd22d0.md  www_bcremc_com_5c793a6b.md  www_bcremc_com_6a542a95.md  www_bcremc_com_6f0dfc95.md  www_bcremc_com_6f6dffff.md  www_bcremc_com_7a302855.md  www_bcremc_com_b1b2c23c.md  www_bcremc_com_be5c9b57.md  www_bcremc_com_c0efb979.md  www_bcremc_com_c6e311ee.md  www_bcremc_com_d201a958.md  www_bcremc_com_d3c74c6d.md  www_bcremc_com_d46d2a39.md  www_bcremc_com_dfec0438.md  www_bcremc_com_fe4c2974.md
streamlit_single_link_loop/: README.md  app.py  config.py  pyproject.toml  run_excel_urls.py  run_gpt54pro_excel.sbatch
streamlit_single_link_loop/analysis_results/: apps_psc_wi_gov_analysis.md  cpuc_ca_gov_FINAL_rebates.md  cpuc_ca_gov_analysis.md  dallascityhall_com_FINAL_rebates.md  dallascityhall_com_analysis.md  deq_mt_gov_analysis.md  development_ohio_gov_analysis.md  dor_mo_gov_analysis.md  dor_wa_gov_analysis.md  energy_maryland_gov_analysis.md  energyinsight_pge_com_analysis.md  evrebates_pge_com_analysis.md  guide_pge_com_analysis.md  homeenergysavings_delmarva_com_analysis.md  homeenergysavings_pepco_com_analysis.md  insider_energytrust_org_analysis.md  ma-eeac_org_analysis.md  marbleheadelectric_com_analysis.md  mgaleg_maryland_gov_analysis.md  psc_wi_gov_analysis.md  publicservice_vermont_gov_analysis.md  secpa_com_analysis.md  takechargeva_com_analysis.md  tax_vermont_gov_analysis.md  unitil_com_analysis.md  wellesleyma_gov_analysis.md  www_aacounty_org_analysis.md  www_ahfc_us_analysis.md  www_anaheim_net_analysis.md  www_aspencore_org_FINAL_rebates.md  www_aspencore_org_analysis.md  www_austintexas_gov_analysis.md  www_cpuc_ca_gov_analysis.md  www_energy_nv_gov_analysis.md  www_energytrust_org_analysis.md  www_fortworthtexas_gov_analysis.md  www_pge_com_analysis.md  www_santaclaraca_gov_analysis.md  www_wellesleyma_gov_analysis.md
streamlit_single_link_loop/analysis_results_gemma_4_31B/: www_anaheim.md
streamlit_single_link_loop/analysis_results_llama_3_8b/: www_anaheim_net_FINAL_rebates.md  www_anaheim_net_analysis.md
streamlit_single_link_loop/gpt_54_pro_analysis_results/: deq_mt_gov_analysis.md  www_anaheim_net_analysis.md
streamlit_single_link_loop/incentivai/: main.py  pyproject.toml
streamlit_single_link_loop/logs/: gpt54pro_excel_35193481.err
streamlit_single_link_loop/scraped_data/: apps_cpuc_ca_gov_046ee5f1.md  apps_cpuc_ca_gov_07e525a6.md  apps_cpuc_ca_gov_133e6fe0.md  apps_cpuc_ca_gov_13962eeb.md  apps_cpuc_ca_gov_243fa58e.md  apps_cpuc_ca_gov_3468247c.md  apps_cpuc_ca_gov_347add25.md  apps_cpuc_ca_gov_40ec20b3.md  apps_cpuc_ca_gov_455e3cba.md  apps_cpuc_ca_gov_4b02ccc3.md  apps_cpuc_ca_gov_51925066.md  apps_cpuc_ca_gov_52858d9e.md  apps_cpuc_ca_gov_5467b5f5.md  apps_cpuc_ca_gov_5819b9a1.md  (+8068 more)
(+6117 files in other folders)
