[project]
name = "incentivai-merge"
version = "0.1.0"
description = "Merged utility incentive extraction (Streamlit + deep crawl + rich scrape + grounded LLM)"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "pandas",
    "requests>=2.26.0,<2.32.3",
    "beautifulsoup4",
    "crawl4ai>=0.3.73,<0.8.0",
    "lxml>=5.3,<6",
    "altair<5",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "pypdf>=4.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "tabulate>=0.9.0",
]
