[project]
name = "incentivai"
version = "0.1.0"
description = "Utility incentive extraction using crawl4ai + LangChain"
requires-python = ">=3.11"

dependencies = [
    # ── Web UI ────────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",

    # ── Data handling ─────────────────────────────────────────────────────────
    "pandas>=2.0.0",
    "openpyxl>=3.1.5",
    "tabulate>=0.9.0",

    # ── Scraping ──────────────────────────────────────────────────────────────
    "crawl4ai>=0.3.73,<0.8.0",
    "lxml>=5.3,<6",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "playwright>=1.58.0",
    "requests>=2.26.0,<2.32.3",

    # ── PDF extraction ────────────────────────────────────────────────────────
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",

    # ── LangChain core ────────────────────────────────────────────────────────
    "langchain-core>=0.2.0",

    # ── LLM providers (install the ones you need) ─────────────────────────────
    "langchain-ollama>=0.1.0",       # ollama  — local models, no key needed
    "langchain-openai>=0.1.0",       # openai  — requires OPENAI_API_KEY
    "langchain-anthropic>=0.1.0",    # anthropic — requires ANTHROPIC_API_KEY
    "langchain-google-genai>=1.0.0", # google/gemini — requires GOOGLE_API_KEY
    "ollama>=0.2.0",                 # ollama python client
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

# ── Tell hatchling your code lives in the root folder, not a src/incentivai package ──
[tool.hatch.build.targets.wheel]
packages = ["."]
