[project]
name = "single-link-tester"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.3.73,<0.8.0",
    "langchain-core>=1.3.3",
    "langchain-ollama>=1.1.0",
    "lxml>=5.3,<6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "streamlit>=1.57.0",
    "tabulate>=0.10.0",
]
